Simplify wrapPointer
Changes suggested by findbugs tool.